# C-MPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: def.h  minecraft.h  net.h
src/: main.cpp  minecraft.c  net.c
test/: blockmodifying.cpp  commontest.hpp  getblock.cpp  getblock_mcpi.py  placesign.cpp  setblock.cpp
tests/: blockmodifying.c  commontest.h  placesign.c  setblock.c
